--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 .App header {
 	text-align: center;
-	font-size: 24px;
+	font-size: 32px;
 	font-weight: bold;
 	color: #3a405a;
+	margin: 25px;
 }
 
 .App main {
