--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,37 @@
 	margin: 25px;
 }
 
+.App .App-logo {
+	max-width: 612px;
+	width: 100%;
+	display: block;
+	margin: 0 auto;
+	filter: sepia(20%);
+	opacity: 85%;
+}
+
 .App main {
 	margin: 20px;
 }
+
 .App footer {
 	color: #333333;
 	font-size: 12px;
 	text-align: center;
+	margin-bottom: 25px;
+}
+
+.App footer a {
+	color: #333333;
+	text-underline-offset: 2px;
+}
+
+.App footer a:hover {
+	text-decoration: none;
+}
+
+.App .App-img-credit,
+.App .App-img-credit a {
+	color: #828282;
+	font-size: 10px;
 }
