--- a/src/Results.css
+++ b/src/Results.css
@@ -33,11 +33,25 @@
 }
 
 .Results li {
-	margin: 0 5px;
+	margin-right: 10px;
 	border: #b59674 solid 1px;
 	border-radius: 18px;
 	padding: 4px 8px;
 	background-color: rgba(250, 214, 176, 0.25);
 	color: #8a6753;
 	font-size: 13px;
+}
+
+@media (max-width: 450px) {
+	.Results li {
+		font-size: 12px;
+	}
+
+	.Results h1 {
+		font-size: 24px;
+	}
+
+	.Results h2 {
+		font-size: 18px;
+	}
 }
