--- a/src/Results.css
+++ b/src/Results.css
@@ -28,12 +28,12 @@
 
 .Results ul {
 	list-style: none;
-	display: flex;
 	padding: 0;
 }
 
 .Results li {
-	margin-right: 10px;
+	display: inline-block;
+	margin: 0 10px 10px 0;
 	border: #b59674 solid 1px;
 	border-radius: 18px;
 	padding: 4px 8px;
